Fixed margin, removed align center

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin:0;
     height: 100vh;
     justify-content: space-between;
 }
@@ -9,6 +9,7 @@ body{
     display: flex;
     color: white;
     background: #1F2937;
+    flex-direction: column;
 }
 .quote-box{
     background:#E5E7EB
@@ -19,4 +20,32 @@ body{
 }
 .wrapper, button{
     background: #3882F6;
+}
+.img{
+    width: 150px;
+    height: 150px;
+    border: 3px solid #3882F6;
+    border-radius: 15%;
+}
+.img-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+a{
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
+}
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 15px;
+}
+.header-wrap {
+    display: flex;
+    justify-content: space-around;
 }
